--- a/Infotag2022MauiBlazorDemo/Shared/NavMenu.razor
+++ b/Infotag2022MauiBlazorDemo/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
 		</div>
 		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="sessions">
-				<span class="oi oi-plus" aria-hidden="true"></span> Programm
+				<span class="oi oi-clock" aria-hidden="true"></span> Programm
 			</NavLink>
 		</div>
 		<div class="nav-item px-3">
